# career-roadmap-ai

./: .gitignore  CLAUDE.md  COST_ANALYSIS.md  Makefile  ONBOARDING.md  README.md  scaffold-web.ps1  step-by-step-process.md
agents/: README.md  conftest.py  pyproject.toml
agents/data/eval/: rag_eval.jsonl  rag_eval_real.jsonl  rag_eval_results.json  rag_eval_results_prod.json  results_ann_only.json  results_reranker.json  results_reranker_hyde.json
agents/data/knowledge-base/: career_kb_real.json  global_market_real.json  market_reports_real.json  onet_occupations_enriched.csv  role_templates_real.json  swiss_eu_market_real.json
agents/scripts/: eval_rag.py  fetch_africa_market.py  fetch_asia_market.py  fetch_bls_oes.py  fetch_career_kb.py  fetch_global_market.py  fetch_ilostat.py  fetch_latam_market.py  fetch_market_reports.py  fetch_mena_market.py  fetch_oceania_market.py  fetch_so_survey.py  fetch_swiss_eu_market.py  generate_eval_dataset.py  prepare_real_data.py  seed_knowledge_base.py  so_survey_converter.py  upload_kb_to_cloudinary.py
agents/src/agents/: __init__.py  config.py
agents/src/agents/bus/: __init__.py  celery_app.py  channel.py  publisher.py  subscriber.py  tasks.py  upload_tasks.py
agents/src/agents/coach/: __init__.py  coach_agent.py  context_assembler.py  models.py
agents/src/agents/coach/prompts/: coach_persona.txt  coach_system.txt
agents/src/agents/coach/tests/: test_coach_agent.py
agents/src/agents/contracts/: __init__.py  events.py  messages.py  results.py  tasks.py
agents/src/agents/core/: __init__.py  agent_registry.py  base_agent.py  context.py  exceptions.py  gateway_metrics.py  llm_provider.py  logging.py  message_bus.py  observability.py  result.py
agents/src/agents/cv_analysis/: __init__.py  cv_agent.py  cv_parser.py  models.py  pdf_parser.py  readiness_scorer.py  skill_extractor.py  skill_normaliser.py
agents/src/agents/cv_analysis/tests/: test_cv_agent.py
agents/src/agents/gap_analysis/: __init__.py  gap_agent.py  gap_prioritiser.py  models.py  role_profiler.py  skill_gap_scorer.py
agents/src/agents/gap_analysis/tests/: test_gap_agent.py
agents/src/agents/intake/: __init__.py  intake_agent.py  models.py  profile_builder.py  slot_extractor.py
agents/src/agents/intake/tests/: test_intake_agent.py
agents/src/agents/learning_resources/: __init__.py  course_fetcher.py  learning_agent.py  mcp_client.py  models.py  resource_embedder.py  resource_matcher.py  resource_ranker.py
agents/src/agents/learning_resources/prompts/: learning_system.txt
agents/src/agents/learning_resources/tests/: test_learning_agent.py
agents/src/agents/market_intelligence/: __init__.py  job_board_fetcher.py  market_agent.py  mcp_client.py  models.py  salary_fetcher.py  signal_processor.py  trend_fetcher.py  trend_summariser.py
agents/src/agents/market_intelligence/tests/: test_market_agent.py
agents/src/agents/networking/: __init__.py  event_finder.py  linkedin_reviewer.py  mcp_client.py  models.py  networking_agent.py  outreach_drafter.py  relationship_tracker.py
agents/src/agents/networking/tests/: test_networking_agent.py
agents/src/agents/opportunity/: __init__.py  cv_tailor.py  job_scorer.py  mcp_client.py  models.py  opportunity_agent.py
agents/src/agents/opportunity/prompts/: cv_tailor_system.txt  opportunity_system.txt
agents/src/agents/opportunity/tests/: test_opportunity_agent.py
agents/src/agents/orchestrator/: __init__.py  clarification_engine.py  orchestrator.py  output_validator.py  result_aggregator.py  state.py  task_dispatcher.py  task_planner.py
agents/src/agents/orchestrator/nodes/: __init__.py  agent_dispatcher.py  completeness_scorer.py  dag_builder.py  intent_parser.py  synthesizer.py
agents/src/agents/orchestrator/tests/: test_clarification_engine.py  test_orchestrator.py  test_output_validator.py
agents/src/agents/persistence/: __init__.py  _client.py  firestore_store.py  interfaces.py  noop_store.py
agents/src/agents/progress/: __init__.py  adaptation_proposer.py  drift_detector.py  habit_streak_analyser.py  models.py  progress_agent.py
agents/src/agents/progress/tests/: test_progress_agent.py
agents/src/agents/rag/: __init__.py  context_injector.py  models.py  observability.py
agents/src/agents/rag/eval/: __init__.py  dataset.py  metrics.py  runner.py
agents/src/agents/rag/ingestion/: bm25_encoder.py  chunker.py  embedder.py  indexer.py  realtime_indexer.py
agents/src/agents/rag/retrieval/: context_assembler.py  hyde.py  mmr.py  query_cache.py  reranker.py  retriever.py
agents/src/agents/rag/tasks/: ingestion_tasks.py
agents/src/agents/roadmap_generation/: __init__.py  milestone_generator.py  models.py  phase_generator.py  resource_linker.py  roadmap_agent.py  weekly_planner.py
agents/src/agents/validator/: __init__.py  claim_auditor.py  evidence_checker.py  fix_instructor.py  models.py  realism_assessor.py  validator_agent.py
mcp-servers/course-catalogue/: config.py  models.py  observability.py  pyproject.toml  server.py
mcp-servers/course-catalogue/clients/: __init__.py  base_client.py  coursera_client.py  coursera_public_client.py  curated_client.py  edx_client.py  oreilly_client.py  udemy_client.py  youtube_client.py
mcp-servers/course-catalogue/tests/: __init__.py  conftest.py  test_server.py
mcp-servers/course-catalogue/tools/: __init__.py  get_course_detail.py  search_courses.py
mcp-servers/github-trends/: config.py  models.py  observability.py  pyproject.toml  server.py
mcp-servers/github-trends/clients/: github_client.py
mcp-servers/github-trends/tests/: test_server.py
mcp-servers/github-trends/tools/: get_good_first_issues.py  get_trending_repos.py
mcp-servers/job-board/: config.py  models.py  observability.py  pyproject.toml  server.py
mcp-servers/job-board/clients/: __init__.py  adzuna_client.py  base_client.py  glassdoor_client.py  indeed_client.py  linkedin_client.py  swiss_jobs_client.py
mcp-servers/job-board/tests/: conftest.py  test_server.py
mcp-servers/job-board/tools/: __init__.py  get_job_detail.py  get_trending_roles.py  search_jobs.py
(+445 files in other folders)
