[project]
name = "career-agents"
version = "0.1.0"
description = "Career Roadmap AI — agentic framework, message bus, and master orchestrator"
authors = [{ name = "Roger Bavibidila", email = "rogerjeasy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "anthropic (>=0.97.0,<0.98.0)",
    "langchain (>=1.2.16,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-anthropic (>=1.4.2,<2.0.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "redis (>=5.3,<6.5)",
    "tenacity (>=9.1.4,<10.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "opentelemetry-api (>=1.41.1,<2.0.0)",
    "opentelemetry-sdk (>=1.41.1,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.41.1,<2.0.0)",
    "opentelemetry-instrumentation-celery (>=0.62b1,<0.63)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "pypdf (>=5.0.0,<6.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "pinecone (>=3.0.0,<4.0.0)",
    "pinecone-text (>=0.9.0,<1.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "cloudinary (>=1.40.0,<2.0.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "cohere (>=5.0.0,<6.0.0)",
    "google-cloud-firestore (>=2.11.0,<3.0.0)",
    "google-auth (>=2.0.0,<3.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "agents", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=40.15.0,<41.0.0)",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/agents"]
