[tool.poetry]
name = "mcp-github-trends"
version = "0.1.0"
description = "MCP GitHub Trends Server — trending repos and good-first-issues via GitHub REST API"
authors = ["Roger Jeasy Bavibidila <rogerjeasy@gmail.com>"]
packages = [{ include = "." }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
httpx = ">=0.27.0"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
structlog = ">=24.4.0"
prometheus-client = ">=0.21.0"
opentelemetry-api = ">=1.28.0"
opentelemetry-sdk = ">=1.28.0"
opentelemetry-instrumentation-fastapi = ">=0.49b0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.28.0"
redis = { version = ">=5.2.0", extras = ["hiredis"] }
tenacity = ">=9.0.0"
sentry-sdk = { version = ">=2.0.0", extras = ["fastapi"] }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-httpx = ">=0.33.0"
ruff = ">=0.7.0"
mypy = ">=1.12.0"

[tool.poetry.scripts]
start = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
